--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:weightSum="10">
+
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sv1"/>
     
     <ListView
         android:layout_width="match_parent"
